--- a/God of the Sesh.html
+++ b/God of the Sesh.html
@@ -9,9 +9,13 @@
 </head>
 <body>
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play God of the Sesh.</tw-noscript></noscript></tw-story>
-<tw-storydata name="God of the Sesh" startnode="5" creator="Twine" creator-version="2.3.13" ifid="B4E8339A-E1D4-4E09-B21E-74A7EA3815DC" zoom="0.25" format="Harlowe" format-version="3.2.1" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">tw-sidebar {
+<tw-storydata name="God of the Sesh" startnode="5" creator="Twine" creator-version="2.3.13" ifid="B4E8339A-E1D4-4E09-B21E-74A7EA3815DC" zoom="0.6" format="Harlowe" format-version="3.2.1" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">tw-sidebar {
 	display: none;
-}</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Chapter 0" tags="" position="567,241" size="100,100">Today is a day like no other in Drinklympus. It’s the millennium anniversary since you, became God of the Sesh and ushered in a new golden age of drinking. And what kind of Sesh God would you be if you did not celebrate such an occasion?
+}
+
+.center {
+  text-align: center;
+}</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Chapter 0" tags="" position="570.3333333333334,244.33333333333334" size="100,100">Today is a day like no other in Drinklympus. It’s the millennium anniversary since you, [[$name|Set Up Character]], became God of the Sesh and ushered in a new golden age of drinking. And what kind of Sesh God would you be if you did not celebrate such an occasion?
 
 For the past month you have been partying day in, day out with your fellow gods in the lead up to the anniversary; you’ve chug-jugged with Galalad, invented new cocktails with Smirnoff that would floor even the hardiest of mortals, and probably have drank a lake worth of the finest wine made from Chardonnay’s very own vineyards on Drinklympus.
 
@@ -19,14 +23,17 @@ It’s truly been the sesh of all seshes!
 
 Today is the final day of the festivities, but it is also the most important day. Today is the day you tell Drinklympus your plans for the next millennium. You’re confident that the next thousands years will also be years of prosperity on Drinklympus.
 
-[[Continue|Chapter 1]]</tw-passagedata><tw-passagedata pid="2" name="Chapter 1" tags="" position="563,503" size="100,100">You’re wandering around the party, making small talk with the party-goers as is your duty as the party host when you see someone skulking by the entrance doors. It’s Corona; one of the higher ranking Lager gods who’s probably one of the next contenders to be promoted to Lager General. You’re surprised to see her by herself; she’s usually inseparable from her best friend Lime.  
+[[Continue|Chapter 1]]
+
+{(if: $pronoun_1 is &quot;she&quot;)[(set: $gender_noun to &quot;woman&quot;)(set: $pronoun_2 to &quot;her&quot;)]
+(else-if: $pronoun_1 is &quot;they&quot;)[(set: $gender_noun to &quot;person&quot;)(set: $pronoun_2 to &quot;them&quot;)]}</tw-passagedata><tw-passagedata pid="2" name="Chapter 1" tags="" position="563,503" size="100,100">You’re wandering around the party, making small talk with the party-goers as is your duty as the party host when you see someone skulking by the entrance doors. It’s Corona; one of the higher ranking Lager gods who’s probably one of the next contenders to be promoted to Lager General. You’re surprised to see her by herself; she’s usually inseparable from her best friend Lime.  
 
 “Corona,” you say as you approach her with a cordial smile. You then ask:
 
 “Strange to see you all alone! Where’s Lime?”
 
 [[Drinklympus]] 
-</tw-passagedata><tw-passagedata pid="3" name="Chardonnay" tags="" position="181,604" size="100,100">[&quot;Why hello cutie, long time no see,&quot; Chardonnay purrs with a wink before taking a long sip from her wine glass. The words that had been on the tip of your tongue suddenly vanish at the unexpected term of endearment and you find yourself swallowing heavily. 
+</tw-passagedata><tw-passagedata pid="3" name="Chardonnay" tags="" position="251.33333333333334,704" size="100,100">[&quot;Why hello cutie, long time no see,&quot; Chardonnay purrs with a wink before taking a long sip from her wine glass. The words that had been on the tip of your tongue suddenly vanish at the unexpected term of endearment and you find yourself swallowing heavily. 
 
 &quot;H-Hey Chardonnay,&quot; you eventually manage to stammer, all the while berating yourself internally for getting flustered. You&#39;d really think a millenia would be enough time to get used to her flirtations, but she always manages to get under your skin.
 
@@ -66,10 +73,14 @@ You&#39;re alarmed for a brief moment by what her suggestive tone is implying, b
 		(set: $chardonnay_random_passages to 0)
 	]
 ]
-(else:)[(show: ?end)]}</tw-passagedata><tw-passagedata pid="4" name="startup" tags="startup" position="174,80" size="100,100">(set: $chardonnay_random_passages to (shuffled: 1,2,3))
+(else:)[(show: ?end)]}</tw-passagedata><tw-passagedata pid="4" name="startup" tags="startup" position="183.66666666666666,53.666666666666664" size="100,100">(set: $chardonnay_random_passages to (shuffled: 1,2,3))
 (set: $chardonnay_checks to 0)
-(set: $Saves to &quot;&quot;)</tw-passagedata><tw-passagedata pid="5" name="Menu" tags="menu" position="570,51" size="100,100">&lt;h1&gt;God of the Sesh&lt;/h1&gt;
-&lt;i&gt;Oh how the mighty do fall...&lt;/i&gt;
+(set: $Saves to &quot;&quot;)
+(set: $name to &quot;Astra&quot;)
+(set: $gender_noun to &quot;man&quot;)
+(set: $pronoun_1 to &quot;he&quot;)
+(set: $pronoun_2 to &quot;him&quot;)</tw-passagedata><tw-passagedata pid="5" name="Menu" tags="menu" position="570,51" size="100,100">&lt;h1&gt;God of the Sesh&lt;/h1&gt;
+&lt;h2&gt;&lt;i&gt;Oh how the mighty do fall...&lt;/i&gt;&lt;/h2&gt;
 
 [[New Game |Chapter 0]]
 {(if: $Saves contains &quot;Slot A&quot;)[
@@ -910,42 +921,42 @@ You defeat $enemyName.
 (else-if: $battleNum is 9)[
 (go-to: &quot;After Battle 9&quot;) ]
 (else-if: $battleNum is 10)[
-(go-to: &quot;After Battle 10&quot;) ]</tw-passagedata><tw-passagedata pid="42" name="After Battle 1" tags="" position="2428.666666666667,987.3333333333333" size="100,100">&lt;img src=&quot;c:\Users\Vincent_2\Documents\Twine\Stories\images\Route 1 Map\Map 4.png&quot; alt=&quot;Map&quot; height=&quot;300&quot; width=&quot;600&quot; /&gt;
+(go-to: &quot;After Battle 10&quot;) ]</tw-passagedata><tw-passagedata pid="42" name="After Battle 1" tags="" position="2428,987" size="100,100">&lt;img src=&quot;c:\Users\Vincent_2\Documents\Twine\Stories\images\Route 1 Map\Map 4.png&quot; alt=&quot;Map&quot; height=&quot;300&quot; width=&quot;600&quot; /&gt;
 Congratulations! You defeated the Wing faction. You&#39;re now one step closer to taking over the world.
 
 [[Continue|Event 3 Recruit Rogue]]</tw-passagedata><tw-passagedata pid="43" name="Battle Lost" tags="" position="3197,1266" size="100,100">You have been defeaten
 
 Would you like to try again?
 [[Yes|Load Save]]
-[[No|Don&#39;t Load Save]]</tw-passagedata><tw-passagedata pid="44" name="After Battle 2" tags="" position="2610.666666666667,991.3333333333333" size="100,100">&lt;img src=&quot;c:\Users\Vincent_2\Documents\Twine\Stories\images\Route 1 Map\Map 8.png&quot; alt=&quot;Map&quot; height=&quot;300&quot; width=&quot;600&quot; /&gt;
+[[No|Don&#39;t Load Save]]</tw-passagedata><tw-passagedata pid="44" name="After Battle 2" tags="" position="2610,991" size="100,100">&lt;img src=&quot;c:\Users\Vincent_2\Documents\Twine\Stories\images\Route 1 Map\Map 8.png&quot; alt=&quot;Map&quot; height=&quot;300&quot; width=&quot;600&quot; /&gt;
 Congratulations! You defeated the Siren faction!
 
 [[Ending 2]]
-</tw-passagedata><tw-passagedata pid="45" name="After Battle 3" tags="" position="2802.6666666666665,988.3333333333333" size="100,100">&lt;img src=&quot;c:\Users\Vincent_2\Documents\Twine\Stories\images\Route 2 Map\Map 3.png&quot; alt=&quot;Map&quot; height=&quot;300&quot; width=&quot;600&quot; /&gt;
+</tw-passagedata><tw-passagedata pid="45" name="After Battle 3" tags="" position="2802,988" size="100,100">&lt;img src=&quot;c:\Users\Vincent_2\Documents\Twine\Stories\images\Route 2 Map\Map 3.png&quot; alt=&quot;Map&quot; height=&quot;300&quot; width=&quot;600&quot; /&gt;
 Congratulations! You defeated the Wing faction. You&#39;re now one step closer to taking over the world.
 
-[[Continue|Reach Loot Room 3]]</tw-passagedata><tw-passagedata pid="46" name="After Battle 4" tags="" position="2433,1116.9999999999998" size="100,100">&lt;img src=&quot;c:\Users\Vincent_2\Documents\Twine\Stories\images\Route 2 Map\Map 6.png&quot; alt=&quot;Map&quot; height=&quot;300&quot; width=&quot;600&quot; /&gt;
+[[Continue|Reach Loot Room 3]]</tw-passagedata><tw-passagedata pid="46" name="After Battle 4" tags="" position="2433,1116" size="100,100">&lt;img src=&quot;c:\Users\Vincent_2\Documents\Twine\Stories\images\Route 2 Map\Map 6.png&quot; alt=&quot;Map&quot; height=&quot;300&quot; width=&quot;600&quot; /&gt;
 Congratulations! You defeated the Rogue faction!
 
-[[Continue|Enter Save Room 3]]</tw-passagedata><tw-passagedata pid="47" name="After Battle 5" tags="" position="2634.666666666667,1132.9999999999998" size="100,100">&lt;img src=&quot;c:\Users\Vincent_2\Documents\Twine\Stories\images\Route 2 Map\Map 6.png&quot; alt=&quot;Map&quot; height=&quot;300&quot; width=&quot;600&quot; /&gt;
+[[Continue|Enter Save Room 3]]</tw-passagedata><tw-passagedata pid="47" name="After Battle 5" tags="" position="2634,1132" size="100,100">&lt;img src=&quot;c:\Users\Vincent_2\Documents\Twine\Stories\images\Route 2 Map\Map 6.png&quot; alt=&quot;Map&quot; height=&quot;300&quot; width=&quot;600&quot; /&gt;
 Congratulations! You defeated the Lycan faction!
 
-[[Continue|Enter Save Room 3]]</tw-passagedata><tw-passagedata pid="48" name="After Battle 6" tags="" position="2821,1123.3333333333333" size="100,100">&lt;img src=&quot;c:\Users\Vincent_2\Documents\Twine\Stories\images\Route 2 Map\Map 8.png&quot; alt=&quot;Map&quot; height=&quot;300&quot; width=&quot;600&quot; /&gt;
+[[Continue|Enter Save Room 3]]</tw-passagedata><tw-passagedata pid="48" name="After Battle 6" tags="" position="2821,1123" size="100,100">&lt;img src=&quot;c:\Users\Vincent_2\Documents\Twine\Stories\images\Route 2 Map\Map 8.png&quot; alt=&quot;Map&quot; height=&quot;300&quot; width=&quot;600&quot; /&gt;
 Congratulations! You defeated the Siren faction!
 
 (if: $route is 1)[
 [[Ending 3a]]]
 (else:)[
-[[Ending 3b]]]</tw-passagedata><tw-passagedata pid="49" name="After Battle 7" tags="" position="2447.3333333333335,1262" size="100,100">&lt;img src=&quot;c:\Users\Vincent_2\Documents\Twine\Stories\images\Route 3 Map\Map 3.png&quot; alt=&quot;Map&quot; height=&quot;300&quot; width=&quot;600&quot; /&gt;
+[[Ending 3b]]]</tw-passagedata><tw-passagedata pid="49" name="After Battle 7" tags="" position="2447,1262" size="100,100">&lt;img src=&quot;c:\Users\Vincent_2\Documents\Twine\Stories\images\Route 3 Map\Map 3.png&quot; alt=&quot;Map&quot; height=&quot;300&quot; width=&quot;600&quot; /&gt;
 Congratulations! You defeated the Wing faction.
 
-[[Continue|Run in with Rogue 2]]</tw-passagedata><tw-passagedata pid="50" name="After Battle 8" tags="" position="2630,1265.3333333333335" size="100,100">&lt;img src=&quot;c:\Users\Vincent_2\Documents\Twine\Stories\images\Route 3 Map\Map 4.png&quot; alt=&quot;Map&quot; height=&quot;300&quot; width=&quot;600&quot; /&gt;
+[[Continue|Run in with Rogue 2]]</tw-passagedata><tw-passagedata pid="50" name="After Battle 8" tags="" position="2630,1265" size="100,100">&lt;img src=&quot;c:\Users\Vincent_2\Documents\Twine\Stories\images\Route 3 Map\Map 4.png&quot; alt=&quot;Map&quot; height=&quot;300&quot; width=&quot;600&quot; /&gt;
 Congratulations! You defeated the Rogue faction!
 
-[[Continue|Run in with Lycan 2]]</tw-passagedata><tw-passagedata pid="51" name="After Battle 9" tags="" position="2829.6666666666665,1278.6666666666665" size="100,100">&lt;img src=&quot;c:\Users\Vincent_2\Documents\Twine\Stories\images\Route 3 Map\Map 5.png&quot; alt=&quot;Map&quot; height=&quot;300&quot; width=&quot;600&quot; /&gt;
+[[Continue|Run in with Lycan 2]]</tw-passagedata><tw-passagedata pid="51" name="After Battle 9" tags="" position="2829,1278" size="100,100">&lt;img src=&quot;c:\Users\Vincent_2\Documents\Twine\Stories\images\Route 3 Map\Map 5.png&quot; alt=&quot;Map&quot; height=&quot;300&quot; width=&quot;600&quot; /&gt;
 Congratulations! You defeated the Lycan faction!
 
-[[Continue|Enter Save Room 5]]</tw-passagedata><tw-passagedata pid="52" name="After Battle 10" tags="" position="2636.6666666666665,1421.6666666666665" size="100,100">&lt;img src=&quot;c:\Users\Vincent_2\Documents\Twine\Stories\images\Route 3 Map\Map 7.png&quot; alt=&quot;Map&quot; height=&quot;300&quot; width=&quot;600&quot; /&gt;
+[[Continue|Enter Save Room 5]]</tw-passagedata><tw-passagedata pid="52" name="After Battle 10" tags="" position="2636,1421" size="100,100">&lt;img src=&quot;c:\Users\Vincent_2\Documents\Twine\Stories\images\Route 3 Map\Map 7.png&quot; alt=&quot;Map&quot; height=&quot;300&quot; width=&quot;600&quot; /&gt;
 Congratulations! You defeated the Siren faction!
 [[Ending 4]]</tw-passagedata><tw-passagedata pid="53" name="Use Grenades" tags="" position="5704,774" size="100,100">(if: $enemyDefending is 0)[
 (set: $enemyHealth to $enemyHealth - 70)
@@ -1154,7 +1165,12 @@ Player Health = $playerHealth/400]
 (else-if: $rogueInParty is 1)[
 [[Rogue Battle Menu]]]
 (else:)[
-[[Enemy Turn|Enemy Battle Menu]] ]}</tw-passagedata></tw-storydata>
+[[Enemy Turn|Enemy Battle Menu]] ]}</tw-passagedata><tw-passagedata pid="62" name="Set Up Character" tags="" position="865,244.16666666666669" size="100,100">&lt;p class=&quot;center&quot;&gt;Raise your glasses to the glorious God of the Sesh
+
+(input-box:2bind $name,&quot;====XX====&quot;,1,&quot;Astra&quot;)
+May (cycling-link: bind $pronoun_1, &quot;he&quot;,&quot;she&quot;,&quot;they&quot;) drink on forever!
+
+[[Continue|Chapter 0]]&lt;/p&gt;</tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">"use strict";var _slicedToArray=function(){return function(e,t){if(Array.isArray(e))return e;if(Symbol.iterator in Object(e))return function(e,t){var n=[],r=!0,i=!1,a=void 0;try{for(var o,s=e[Symbol.iterator]();!(r=(o=s.next()).done)&&(n.push(o.value),!t||n.length!==t);r=!0);}catch(e){i=!0,a=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw a}}return n}(e,t);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}!function(){
 /**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
