--- a/God of the Sesh.html
+++ b/God of the Sesh.html
@@ -15,7 +15,7 @@
 
 .center {
   text-align: center;
-}</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Chapter 0" tags="" position="570.3333333333334,244.33333333333334" size="100,100">Today is a day like no other in Drinklympus. It’s the millennium anniversary since you, [[$name|Set Up Character]], became God of the Sesh and ushered in a new golden age of drinking. And what kind of Sesh God would you be if you did not celebrate such an occasion?
+}</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="A1 Chp0" tags="" position="1397,297.6666666666667" size="100,100">Today is a day like no other in Drinklympus. It’s the millennium anniversary since you, [[$name|Set Up Character]], became God of the Sesh and ushered in a new golden age of drinking. And what kind of Sesh God would you be if you did not celebrate such an occasion?
 
 For the past month you have been partying day in, day out with your fellow gods in the lead up to the anniversary; you’ve chug-jugged with Galalad, invented new cocktails with Smirnoff that would floor even the hardiest of mortals, and probably have drank a lake worth of the finest wine made from Chardonnay’s very own vineyards on Drinklympus.
 
@@ -23,48 +23,26 @@ It’s truly been the sesh of all seshes!
 
 Today is the final day of the festivities, but it is also the most important day. Today is the day you tell Drinklympus your plans for the next millennium. You’re confident that the next thousands years will also be years of prosperity on Drinklympus.
 
-[[Continue|Chapter 1]]
+[[Continue|A1 Chp1]]
 
 {(if: $pronoun_1 is &quot;she&quot;)[(set: $gender_noun to &quot;woman&quot;)(set: $pronoun_2 to &quot;her&quot;)]
-(else-if: $pronoun_1 is &quot;they&quot;)[(set: $gender_noun to &quot;person&quot;)(set: $pronoun_2 to &quot;them&quot;)]}</tw-passagedata><tw-passagedata pid="2" name="Chapter 1" tags="" position="563,503" size="100,100">You’re wandering around the party, making small talk with the party-goers as is your duty as the party host when you see someone skulking by the entrance doors. It’s Corona; one of the higher ranking Lager gods who’s probably one of the next contenders to be promoted to Lager General. You’re surprised to see her by herself; she’s usually inseparable from her best friend Lime.  
+(else-if: $pronoun_1 is &quot;they&quot;)[(set: $gender_noun to &quot;person&quot;)(set: $pronoun_2 to &quot;them&quot;)]}</tw-passagedata><tw-passagedata pid="2" name="A1 Chp1" tags="" position="1401.3333333333333,501.3333333333333" size="100,100">You’re wandering around the party, making small talk with the party-goers as is your duty as the party host when you see someone skulking by the entrance doors. It’s Corona; one of the higher ranking Lager gods who’s probably one of the next contenders to be promoted to Lager General. You’re surprised to see her by herself; she’s usually inseparable from her best friend Lime.  
 
 “Corona,” you say as you approach her with a cordial smile. You then ask:
 
 “Strange to see you all alone! Where’s Lime?”
 
 [[Drinklympus]] 
-</tw-passagedata><tw-passagedata pid="3" name="Chardonnay" tags="" position="251.33333333333334,704" size="100,100">[&quot;Why hello cutie, long time no see,&quot; Chardonnay purrs with a wink before taking a long sip from her wine glass. The words that had been on the tip of your tongue suddenly vanish at the unexpected term of endearment and you find yourself swallowing heavily. 
+</tw-passagedata><tw-passagedata pid="3" name="Chardonnay Controller" tags="" position="599.6666666666667,605.6666666666665" size="100,100">You walk up to Chardonnay who&#39;s lounging by the wine waterfall, a large glass of wine in hand.
 
-&quot;H-Hey Chardonnay,&quot; you eventually manage to stammer, all the while berating yourself internally for getting flustered. You&#39;d really think a millenia would be enough time to get used to her flirtations, but she always manages to get under your skin.
-
-Chardonnay&#39;s lip juts out in a fake pout. &quot;Now $name, I thought we were... //close// enough for you to no longer call me that anymore. You&#39;re not going to break this poor girl&#39;s heart and say you&#39;ve forgotten, are you?&quot;
-
-You&#39;re alarmed for a brief moment by what her suggestive tone is implying, but then you see the mirth shinning in those gray eyes. Damn it she&#39;s messing with you again. You open your mouth to call her a liar when a vague drunken memory resurfaces. You... You //did// start calling her some kind of nickname during one of the many nights of the Millienium Anniversary but you cannot remember it for the life of you. 
-
-[(link-reveal: &quot;\&quot;Donna\&quot;, you say slowly, testing the name on your lips.&quot;)[(replace: ?c1_o2)[](set: $chardonnay_checks to it +1)
-&lt;br&gt;She regards you silently for a long moment and you&#39;re sweating bullets until a small but pleased smile grows on her face.]]&lt;c1_o1|
-[(link: &quot;\&quot;Gorgeous\&quot;, you say with a wink.&quot;)[(replace: ?c1_o1)[&quot;Gorgeous&quot;, you say with a wink.&quot;&lt;br&gt;
-&quot;A $gender after my own heart,&quot; she replies with a theatrical sigh.]
-]]&lt;c1_o2|
-
-](meeting_one|
-
-[&quot;Random is 1&quot;](r1|
-[&quot;Random is 2&quot;](r2|
-[&quot;Random is 3&quot;](r3|
-
-[&quot;Final meeting&quot;](end|
-
-[[Continue |Drinklympus]] 
-
-{(unless: (history:) contains &quot;Chardonnay&quot;)[
-	(show: ?meeting_one)
+{(unless: (history:) contains &quot;Chardonnay Controller&quot;)[
+	(display: &quot;Chardonnay Start&quot;)
 ]
 (else-if: $chardonnay_random_passages is not 0 )[
 	(set: _random to $chardonnay_random_passages&#39;s 1st)
-	(if: _random is 1)		[(show: ?r1)]
-	(else-if: _random is 2)	[(show: ?r2)]
-	(else-if: _random is 3)	[(show: ?r3)]
+	(if: _random is 1)		[(display: &quot;Chardonnay R1&quot;)]
+	(else-if: _random is 2)	[(display: &quot;Chardonnay R2&quot;)]
+	(else-if: _random is 3)	[(display: &quot;Chardonnay R3&quot;)]
 	
 	(if: $chardonnay_random_passages&#39;s length &gt; 1) [
 		(set: $chardonnay_random_passages to $chardonnay_random_passages&#39;s (range:2,$chardonnay_random_passages&#39;s length))
@@ -73,26 +51,26 @@ You&#39;re alarmed for a brief moment by what her suggestive tone is implying, b
 		(set: $chardonnay_random_passages to 0)
 	]
 ]
-(else:)[(show: ?end)]}</tw-passagedata><tw-passagedata pid="4" name="startup" tags="startup" position="183.66666666666666,53.666666666666664" size="100,100">(set: $chardonnay_random_passages to (shuffled: 1,2,3))
+(else:)[(display: &quot;Chardonnay End&quot;)]} </tw-passagedata><tw-passagedata pid="4" name="startup" tags="startup" position="1205.3333333333335,107" size="100,100">(set: $chardonnay_random_passages to (shuffled: 1,2,3))
 (set: $chardonnay_checks to 0)
 (set: $Saves to &quot;&quot;)
 (set: $name to &quot;Astra&quot;)
 (set: $gender_noun to &quot;man&quot;)
 (set: $pronoun_1 to &quot;he&quot;)
-(set: $pronoun_2 to &quot;him&quot;)</tw-passagedata><tw-passagedata pid="5" name="Menu" tags="menu" position="570,51" size="100,100">&lt;h1&gt;God of the Sesh&lt;/h1&gt;
+(set: $pronoun_2 to &quot;him&quot;)</tw-passagedata><tw-passagedata pid="5" name="Menu" tags="menu" position="1403.3333333333335,104.33333333333334" size="100,100">&lt;h1&gt;God of the Sesh&lt;/h1&gt;
 &lt;h2&gt;&lt;i&gt;Oh how the mighty do fall...&lt;/i&gt;&lt;/h2&gt;
 
-[[New Game |Chapter 0]]
+[[New Game |A1 Chp0]]
 {(if: $Saves contains &quot;Slot A&quot;)[
   (link: &quot;Load game&quot;)[(load-game:&quot;Slot A&quot;)]
-]}</tw-passagedata><tw-passagedata pid="6" name="Drinklympus" tags="" position="560,840" size="100,100">{(link:&quot;Save Game&quot;)[
+]}</tw-passagedata><tw-passagedata pid="6" name="Drinklympus" tags="" position="1405,805" size="100,100">{(link:&quot;Save Game&quot;)[
   (if:(save-game:&quot;Slot A&quot;))[
     Game saved!
   ](else: )[
     Sorry, I couldn&#39;t save your game.
   ]
 ]}
-[[Chardonnay]] </tw-passagedata><tw-passagedata pid="7" name="Player Battle Menu" tags="" position="4384,741" size="100,100">(if: $playerBlinded is 0)[
+[[Chardonnay Controller]] </tw-passagedata><tw-passagedata pid="7" name="Player Battle Menu" tags="" position="4384,741" size="100,100">(if: $playerBlinded is 0)[
 What will the player do?
 
 [[Attack]]
@@ -1165,12 +1143,34 @@ Player Health = $playerHealth/400]
 (else-if: $rogueInParty is 1)[
 [[Rogue Battle Menu]]]
 (else:)[
-[[Enemy Turn|Enemy Battle Menu]] ]}</tw-passagedata><tw-passagedata pid="62" name="Set Up Character" tags="" position="865,244.16666666666669" size="100,100">&lt;p class=&quot;center&quot;&gt;Raise your glasses to the glorious God of the Sesh
+[[Enemy Turn|Enemy Battle Menu]] ]}</tw-passagedata><tw-passagedata pid="62" name="Set Up Character" tags="" position="1601.6666666666667,102.50000000000003" size="100,100">&lt;p class=&quot;center&quot;&gt;Raise your glasses to the glorious God of the Sesh
 
 (input-box:2bind $name,&quot;====XX====&quot;,1,&quot;Astra&quot;)
 May (cycling-link: bind $pronoun_1, &quot;he&quot;,&quot;she&quot;,&quot;they&quot;) drink on forever!
 
-[[Continue|Chapter 0]]&lt;/p&gt;</tw-passagedata></tw-storydata>
+[[Continue|A1 Chp0]]&lt;/p&gt;</tw-passagedata><tw-passagedata pid="63" name="Chardonnay Start" tags="" position="504.9999999999999,394.1666666666667" size="100,100">&quot;Why hello cutie, long time no see,&quot; Chardonnay purrs with a wink before taking a long sip from her wine glass. The words that had been on the tip of your tongue suddenly vanish at the unexpected term of endearment and you find yourself swallowing heavily. 
+
+&quot;H-Hey Chardonnay,&quot; you eventually manage to stammer, all the while berating yourself internally for getting flustered. You&#39;d really think a millenia would be enough time to get used to her flirtations, but she always manages to get under your skin.
+
+Chardonnay&#39;s lip juts out in a fake pout. &quot;Now $name, I thought we were... //close// enough for you to no longer call me that anymore. You&#39;re not going to break this poor girl&#39;s heart and say you&#39;ve forgotten, are you?&quot;
+
+You&#39;re alarmed for a brief moment by what her suggestive tone is implying, but then you see the mirth shinning in those gray eyes. Damn it she&#39;s messing with you again. You open your mouth to call her a liar when a vague drunken memory resurfaces. You... You //did// start calling her some kind of nickname during one of the many nights of the Millienium Anniversary but you cannot remember it for the life of you. 
+
+[(link-reveal: &quot;\&quot;Donna\&quot;, you say slowly, testing the name on your lips.&quot;)[(replace: ?c1_o2)[](set: $chardonnay_checks to it +1)
+&lt;br&gt;She regards you silently for a long moment and you&#39;re sweating bullets until a small but pleased smile grows on her face.]]&lt;c1_o1|
+[(link: &quot;\&quot;Gorgeous\&quot;, you say with a wink.&quot;)[(replace: ?c1_o1)[&quot;Gorgeous&quot;, you say with a wink.&quot;&lt;br&gt;
+&quot;A $gender_noun after my own heart,&quot; she replies with a theatrical sigh, but her eyes seem more distant now. Is she upset with you for forgetting, you wonder.]
+]]&lt;c1_o2|
+
+[[Continue|Drinklympus]] </tw-passagedata><tw-passagedata pid="64" name="Chardonnay R1" tags="" position="401.6666666666667,494.1666666666667" size="100,100">r1
+
+[[Continue|Drinklympus]] </tw-passagedata><tw-passagedata pid="65" name="Chardonnay R2" tags="" position="401.6666666666665,602.5000000000001" size="100,100">r2
+
+[[Continue |Drinklympus]] </tw-passagedata><tw-passagedata pid="66" name="Chardonnay R3" tags="" position="399.99999999999994,707.5000000000001" size="100,100">r3
+
+[[Continue|Drinklympus]] </tw-passagedata><tw-passagedata pid="67" name="Chardonnay End" tags="" position="506.66666666666663,804.1666666666667" size="100,100">end
+
+[[Continue|Drinklympus]] </tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">"use strict";var _slicedToArray=function(){return function(e,t){if(Array.isArray(e))return e;if(Symbol.iterator in Object(e))return function(e,t){var n=[],r=!0,i=!1,a=void 0;try{for(var o,s=e[Symbol.iterator]();!(r=(o=s.next()).done)&&(n.push(o.value),!t||n.length!==t);r=!0);}catch(e){i=!0,a=e}finally{try{!r&&s.return&&s.return()}finally{if(i)throw a}}return n}(e,t);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}!function(){
 /**
  * @license almond 0.3.3 Copyright jQuery Foundation and other contributors.
